@@ -85,10 +85,10 @@ recapitulates the input information, gives joint displacements in global coordin
 <p><b>Frame3DD</b> writes a
 <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a>
 script file used for viewing deformed frames and dynamic mode shapes.
-If the Output Data is written to a file called <tt>MyResultsA.out</tt>,
-the Gnuplot script is written to a file called <tt>MyResultsA.plt</tt>.
+If the Output Data is written to a file called <b>MyResultsA.out</b>,
+the Gnuplot script is written to a file called <b>MyResultsA.plt</b>.
 Graphical output may be viewed by starting Gnuplot and typing:
-<tt> load 'MyResultsA.plt'</tt>.
+<b> load 'MyResultsA.plt'</b>.
 </p>
 
 <p><b>Frame3DD</b> can consider multiple static load cases in a single analysis.</p>
@@ -146,16 +146,20 @@ via <a href="http://www.gnuplot.info/">Gnuplot</a> version 4.2.
 <a name="starting"><h2>1. Getting started</h2>
 <ol>
 <li>Read the User Manual and Reference (this file).
-<li>Download or build the Frame3DD executable for your operating system (see below).
-<li>Optionally, obtain a copy of Gnuplot for your operating system.
-<li>  Open a terminal window, go to the Frame3DD/examples directory, and run the program on one of the examples using a command like ...
+<li>
+<a href="http://sourceforge.net/project/platformdownload.php?group_id=221386">
+Download</a> Frame3DD and save the Frame3DD folder to your Desktop (more details below).
+<li>Optionally, obtain a copy of Gnuplot for your operating system (more details below).
+<li>Open a terminal window, go to the Frame3DD directory, and run the program on one of the examples using a command like ...
 <pre>
-frame3dd  exA.3dd  exA.out
+frame3dd  examples/exE.3dd  examples/exE.out
 </pre>
 <li>Open the Output Data file using a good text editor and view the Output Data.
 <li>Plot the structural configuration, the deformed structural shape, and mode-shapes, by starting <a href="http://www.duke.edu/~hpgavin/gnuplot.html">Gnuplot</a>, and typing
-           <tt>load 'exA.plt'</tt> at the <tt>gnuplot></tt> prompt.
-<br>
+<pre>
+     gnuplot>   cd 'Desktop/Frame3DD/examples'
+     gnuplot>   load 'exE.plt'
+</pre>
 Observe a series of plots by hitting the Return (or Enter) key between plots.
 <br>
 If a dynamic analysis was performed, you will enjoy an animation of selected mode shapes.<br>
@@ -172,7 +176,7 @@ Several examples are given at <a href="http://frame3dd.sourceforge.net/">http://
 <ul>
 <li>Comments may be placed anywhere in the file and are helpful in organizing the Input Data.
 <br>
-A comment begins with one of the following four characters <tt># % ? ; </tt> and continues to the end of the line.
+A comment begins with one of the following four characters <b># % ? ; </b> and continues to the end of the line.
 <li>All commas in the Input Data are ignored.
 <li>Floating point numbers must be entered as 1.234 1234 or 1.234e3.
 <li>Arithmetic expressions such as 1.234*10^3 or 6*sin(pi/2) are <b>not</b> allowed
@@ -225,9 +229,10 @@ found with the Input Data.
 <b>Frame3DD</b> generates several <b>additional output files</b> used in plotting deformed frames.  
 By default, these output files are sent to a temporary file folder. 
 On OS X, Linux, and Unix, the location of this folder defaults to the <b>/tmp</b> directory.
-On Windows, the location of this folder defaults to either <b>WINDOWS\Temp</b>
+On Windows, the location of this folder defaults to <b>C:\WINDOWS\Temp</b>.  
+<!--
 or the user's <b>Local Settings\Temp</b> (XP) or <b>AppData\Local\Temp</b> (Vista).  
-<br><br>
+-->
 If you would like your output files to be sent to another location, you can set the <a href="http://en.wikipedia.org/wiki/Environment_variable">environment variable</a> <b>FRAME3DD_OUTDIR</b> with the path to your desired temporary output directory. The additional output files will then appear in the folder you have specified.
 </p>
 <!-- </div> -->
@@ -240,7 +245,7 @@ Frame3DD installation packages are available for download for Linux,
 for OS X, and for Windows operating systems as .ZIP archives.
 These installation .ZIP archives include:
 <ul>
-<li> A copy of the GPL the license (LICENSE.txt)
+<li> A copy of the GPL license (LICENSE.txt)
 <li> The executable program (frame3dd) for the selected operating system (Linux, OS X, or Windows)
 <li> This manual, (doc/user-manual.html) 
 <li> Some general information (README.txt)
@@ -284,12 +289,12 @@ Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_linux.zip) and save it 
 double-click the icon to extract it to your <b>Desktop</b>. 
 <li>
 <b>(<i>Recommended</i>)</b>
-Put the <b>Frame3DD</b> directory in your path and set the <tt>FRAME3DD_OUTDIR</tt> location.<br>
+Put the <b>Frame3DD</b> directory in your path and set the <b>FRAME3DD_OUTDIR</b> location.<br>
 To do this, double-click the <b>Home</b> icon on the Desktop, and select <b>View > Show Hidden Files</b><br><br>
 
 If you have a file called <b>.bashrc</b> in your home directory,
-open it with a double-click,
-and cut-and paste the following ten lines into the beginning of <b>.bashrc</b> 
+open it with a double-click.
+Copy-and-paste the following ten lines into the beginning of <b>.bashrc</b> 
 <pre>
 # for Frame3DD ... http://frame3dd.sourceforge.net/
 # add Frame3DD executeable directory to the path
@@ -307,8 +312,8 @@ export FRAME3DD_OUTDIR=/tmp/frame3dd_temp_$USER
 <br><br>
 
 If you have a file named <b>.cshrc</b> in your home directory,
-open it with a double-click, 
-and cut-and paste the following ten lines into the beginning of <b>.cshrc</b> 
+open it with a double-click. 
+Copy-and-paste the following ten lines into the beginning of <b>.cshrc</b> 
 <pre>
 # for Frame3DD ... http://frame3dd.sourceforge.net/
 # add Frame3DD executable directory to the path
@@ -326,11 +331,11 @@ setenv FRAME3DD_OUTDIR /tmp/frame3dd_temp_$user
 <li> Open a Terminal window. (Right-click on an open part of the Desktop and select <b>Open Terminal</b>.) 
 Change to the directory containing the Frame3DD example files and run an example, as follows. 
 <pre>
-cd  ~/Desktop/Frame3DD/examples/                 # change to the examples directory
-frame3dd  exA.3dd  exA.out                       # run the program
+cd  ~/Desktop/Frame3DD/examples/                 
+frame3dd  exE.3dd  exE.out                      
 </pre>
 Some run-time information will be displayed on the Terminal and
-the results of your Frame3DD analysis will have been appended to the end of the <tt>exA.out</tt> Output Data file.
+the results of your Frame3DD analysis will have been appended to the end of the <b>exE.out</b> Output Data file.
 Data files used primarily for plotting are stored in the <b>/tmp/frame3dd_temp_$USER</b> directory.
 <li>       You may view Output Data files and edit Input Data files using a good plain text editor
 <!-- (<a href="http://thomer.com/vi/vi.html">vim</a>, -->
@@ -367,12 +372,12 @@ gnuplot
 <pre>
       gnuplot>  load 'MyResultsA.plt'
 </pre>
-where <tt>MyResultsA.out</tt> is the name of of the Output Data file 
+where <b>MyResultsA.out</b> is the name of of the Output Data file 
 specified when running Frame3DD. 
 <li>Hit the 'Return' key in the Terminal window to see the sequence of plots
-and animations until the <tt>gnuplot></tt> prompt returns.
+and animations until the <b>gnuplot></b> prompt returns.
 Or hit <b>CTRL-C</b> to stop the plots at the current plot.  
-<li> To save the current plot as a PostScript file in the Frame3DD/examples directory, use the <tt>saveplot</tt> script included in the Frame3DD/examples directory.
+<li> To save the current plot as a PostScript file in the Frame3DD/examples directory, use the <b>saveplot</b> script included in the Frame3DD/examples directory.
 <pre>
      gnuplot>  load 'saveplot'
      gnuplot>  !cp my-plot.ps PlotFileA.ps
@@ -400,7 +405,8 @@ On Debian-based systems it should suffice to
 <pre>
 sudo apt-get install build-essential scons
 </pre>
-<li>If you would like to build the Microstran viewer, ensure that the package <tt>libsoqt-dev4</tt> is installed on your system.
+<li>If you would like to build the Microstran viewer, ensure that the package
+<tt>libsoqt-dev4</tt> is installed on your system.
 <pre>
 sudo apt-get install libsoqt-dev4
 </pre>
@@ -428,13 +434,13 @@ sudo scons install INSTALL_PREFIX=/usr/bin/
 </pre>
 <li>If you do not have root privileges, you can run Frame3dd directly from the build tree:
 <pre>
-export LD_LIBRARY_PATH=~/frame3dd-VERSION/build</tt>
+export LD_LIBRARY_PATH=~/frame3dd-VERSION/build
 export PATH=$PATH:~/frame3dd-VERSION/build
 </pre>
 
-<li>Copy one of the frame3dd-VERSION/examples/*.3dd files (e.g., <tt>exA.3dd</tt>) into your home directory, make sure you have write-privileges for the file, and run one of the examples
+<li>Copy one of the frame3dd-VERSION/examples/*.3dd files (e.g., <b>exE.3dd</b>) into your home directory, make sure you have write-privileges for the file, and run one of the examples
 <pre>
-frame3dd  exA.3dd  exA.out
+frame3dd  exE.3dd  exE.out
 </pre>
 </ol>
 
@@ -470,12 +476,12 @@ Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_osx.zip) and save it in
 <li> If the .ZIP archive was not automatically unzipped, 
 double-click the icon to extract it to your <b>Desktop</b>. 
 <li><b>(<i>Recommended</i>)</b>
-Put the <b>Frame3DD</b> directory in your path and set the <tt>FRAME3DD_OUTDIR</tt> location.<br>
+Put the <b>Frame3DD</b> directory in your path and set the <b>FRAME3DD_OUTDIR</b> location.<br>
 To do this, open your <b>~/.profile</b> file using your good text editor.<br>
 Using jEdit, <b>File > Open </b> and type <b>~/.profile</b> in the <b>File Name:</b> text entry bar.<br>
 Using TextWrangler, <b>File > Open Hidden</b> and select <b>.profile</b> from your home directory.<br>
 Using Vim, <b>File > Open</b> and select <b>.profile</b> from your home directory.<br>
-Cut-and paste the following ten lines into the beginning of <b>~/.profile</b> 
+Copy-and-paste the following ten lines into the beginning of <b>~/.profile</b> 
 <pre>
 # for Frame3DD ... http://frame3dd.sourceforge.net/
 # add Frame3DD executable directory to the path
@@ -494,18 +500,12 @@ export FRAME3DD_OUTDIR=/tmp/frame3dd_temp_$USER
 Open a Terminal (Applications > Utilities > Terminal),  
 change to the directory of example files and run an example.
 <pre>
-cd  ~/Desktop/Frame3DD/examples/   # change to the examples directory
-frame3dd  exA.3dd  exA.out         # run the program
+cd  ~/Desktop/Frame3DD/examples/   
+frame3dd  exE.3dd  exE.out        
 </pre>
 Some run-time information will be displayed on the Terminal and
 the results of your Frame3DD analysis will have been appended to the end of the 
-<tt>exA.out</tt> Output Data file. Data files used primarily for plotting are stored in the <b>/tmp/frame3dd_temp_$USER</b> directory. 
-
-<!-- <li>        Run <b>Frame3DD</b> from a Terminal window  (another way).
-             Click on the <b>frame3dd</b> icon in your Desktop.
-             A Terminal window should automatically open.
-             When asked for the Input/Output file name, type ...<br>
-<tt>/Users/your_name_here/Desktop/examples/exA.3dd</tt> -->
+<b>exE.out</b> Output Data file. Data files used primarily for plotting are stored in the <b>/tmp/frame3dd_temp_$USER</b> directory. 
 
 <li>     You may view Output Data files and edit Input Data files using your plain text editor
 (<a href="http://www.jedit.org/index.php">jEdit</a>, 
@@ -557,10 +557,10 @@ gnuplot
      gnuplot>  cd '~/Desktop/Frame3DD/examples'
      gnuplot>  load 'MyResultsA.plt'
 </pre>
-where <tt>MyResultsA.out</tt> is the name of of the Output Data file specified 
+where <b>MyResultsA.out</b> is the name of of the Output Data file specified 
 when running frame3dd.
 <li>Hit the 'Return' key in the Terminal window to see the sequence of plots
-and animations until the <tt> gnuplot></tt> prompt returns.
+and animations until the <b>gnuplot></b> prompt returns.
 <li>Save or print plots using [APPLE] [P].<br>
 <li>After finishing with your plots, quit Gnuplot by typing ... 
 <pre>
@@ -614,14 +614,14 @@ Download</a> the Frame3DD .ZIP archive (Frame3DD_VERSION_win32.zip) and save it 
 double-click the icon to extract it to your <b>Desktop</b>. 
 <li> <b>(<i>Recommended</i>)</b>
 Put the <b>Frame3DD</b> directory in your path and set the 
-<tt>PATH</tt> and <tt>FRAME3DD_OUTDIR</tt> environment variables.<br>
+<b>PATH</b> and <b>FRAME3DD_OUTDIR</b> environment variables.<br>
 To do this,
 <b> right-click My Computer > Properties > Advanced > Environment Variables</b><br>
-Set a new user variable name <tt>PATH</tt>
-with variable value <tt>%HOMEPATH%\Desktop\Frame3DD</tt></br>
-Set a new user variable name <tt>FRAME3DD_OUTDIR</tt> 
-with variable value <tt>%HOMEPATH%\Desktop\Frame3DD\temp</tt></br>
-(The <tt>Desktop\Frame3DD\temp</tt> folder should already exist.)<br>
+Set a new user variable name <b>PATH</b>
+with variable value <b>%HOMEPATH%\Desktop\Frame3DD</b></br>
+Set a new user variable name <b>FRAME3DD_OUTDIR</b> 
+with variable value <b>%HOMEPATH%\Desktop\Frame3DD\temp</b></br>
+(The <b>Desktop\Frame3DD\temp</b> folder should already exist.)<br>
 Detailed information on how to set environment variables in Windows is <a href="http://vlaurie.com/computers2/Articles/environment.htm">here</a>, if you need it.  
 
 <li>Open a 
@@ -631,12 +631,16 @@ Detailed information on how to set environment variables in Windows is <a href="
 change to the directory of example files, and run an example, as follows:
 <pre>
 chdir %HOMEPATH%\Desktop\Frame3DD\examples
-frame3dd  exA.3dd  exA.out
+frame3dd  exE.3dd  exE.out
 </pre>
-Alternatively, you may double-click on the <b>frame3dd.exe</b> icon and
-enter the Input Data file name and Output Data file name when prompted.<br>
+Alternatively, you may double-click on the <b>frame3dd</b> program icon and
+enter the Input Data file name and Output Data file name when prompted, as follows:
+<pre>
+Please enter the  input data file name:  examples/exE.3dd
+Please enter the output data file name:  examples/exE.out
+</pre>
 Some run-time information will be displayed on the Command Prompt window and
-the results of your Frame3DD analysis will have been appended to the end of the <tt>exA.out</tt> Output Data file.
+the results of your Frame3DD analysis will have been appended to the end of the <b>exE.out</b> Output Data file.
 Data files used primarily for plotting are stored in the <b>Desktop\Frame3DD\temp</b> folder.
 <li>       You may view Output Data files and edit Input Data files
 using a good plain text editor
@@ -660,7 +664,7 @@ to view the graphical output.
 
 <ol>
 <li>
-<a href="http://downloads.sourceforge.net/gnuplot/gp424win32.zip">
+<a href="http://downloads.sourceforge.net/gnuplot/gp426win32.zip">
 Download</a> the MS-Windows version of Gnuplot
 and save it to your <b>Desktop</b>.
 <li> Navigate to <b>Desktop > Gnuplot > bin</b> and 
@@ -671,10 +675,10 @@ right click on <b>wgnuplot</b> to create a shortcut to your <b>Desktop</b>.
 <pre>
       gnuplot>  load 'MyResultsA.plt'
 </pre>
-where <tt>MyResultsA.out</tt> is the name of of the Output Data file 
+where <b>MyResultsA.out</b> is the name of of the Output Data file 
 specified when running Frame3DD. 
 <li>Click <b>OK</b> to see the next plot or <b>Cancel</b> to stop with the current plot.  
-<li> To save the current plot as a PostScript file in the Frame3DD/examples folder, use the <tt>saveplot_w32</tt> script included in the Frame3DD/examples folder.
+<li> To save the current plot as a PostScript file in the Frame3DD/examples folder, use the <b>saveplot_w32</b> script included in the Frame3DD/examples folder.
 <pre>
      gnuplot>  load 'saveplot_w32'
      gnuplot>  !copy my-plot.ps PlotFileA.ps
@@ -701,17 +705,17 @@ Download</a> and run the binary installer (frame3dd-VERSION.exe).
 -->
 <li> <b>(<i>Recommended</i>)</b>
 Put the <b>Frame3DD</b> directory in your path and set the 
-<tt>PATH</tt> and <tt>FRAME3DD_OUTDIR</tt> environment variables<br>. 
+<b>PATH</b> and <b>FRAME3DD_OUTDIR</b> environment variables.<br> 
 To do this,
 <b> right-click My Computer > Properties > Advanced > Environment Variables</b><br>
-Set a new user variable name <tt>PATH</tt>
-with variable value <tt>%PROGRAMFILES%\Frame3DD</tt></br>
-Set a new user variable name <tt>FRAME3DD_OUTDIR</tt> 
-with variable value <tt>%HOMEPATH%\Desktop\temp</tt></br>
-You will need to create this Temp folder: <tt>Desktop\Frame3DD\temp</tt>.<br> 
+Set a new user variable name <b>PATH</b>
+with variable value <b>%PROGRAMFILES%\Frame3DD</b></br>
+Set a new user variable name <b>FRAME3DD_OUTDIR</b> 
+with variable value <b>%HOMEPATH%\Desktop\Frame3DD\temp</b> .</br>
+You will need to create this Temp folder: <b>Desktop\Frame3DD\temp</b> before running <b>Frame3DD</b>.<br> 
 Detailed information on how to set environment variables in Windows is <a href="http://vlaurie.com/computers2/Articles/environment.htm">here</a>, if you need it.  
 
-<li>Copy one or more of the example files (eg <tt>exA.3dd</tt>) from your <b>%PROGRAMFILES%\FRAME3DD\examples</b> folder into your <b>Desktop</b> folder
+<li>Copy one or more of the example files (eg <b>exE.3dd</b>) from your <b>%PROGRAMFILES%\FRAME3DD\examples</b> folder into your <b>Desktop</b> folder
 <li>
 Open a
 "<a href="http://www.bleepingcomputer.com/tutorials/tutorial76.html#intro">command prompt window</a>" 
@@ -719,11 +723,11 @@ Open a
 change to the directory of example files and run an example:
 <pre>
 chdir %HOMEPATH%\Desktop
-frame3dd  exA.3dd  exA.out
+frame3dd  exE.3dd  exE.out
 </pre>
 Some run-time information will be displayed on the Command Prompt window and
-the results of your Frame3DD analysis will have been appended to the end of the <tt>exA.out</tt> Output Data file.
-Data files used primarily for plotting are stored in the <b>%TEMP%\frame3dd_temp</b> folder.
+the results of your Frame3DD analysis will have been appended to the end of the <b>exE.out</b> Output Data file.
+Data files used primarily for plotting are stored in the <b>Desktop\Frame3DD\temp</b> folder.
 <li> You may run <b>Frame3DD</b>, examine the analysis results, visualize the results using Gnuplot, and edit Input Data files
  as described above.  
 </ol>
@@ -819,10 +823,10 @@ function [D,R,F,L,Ks] = frame_3dd(XYZ,JTS,RCT,EAIJ,P,U,D)
 <p>
 This m-function, <a href="../matlab/frame_3dd.m">frame_3dd.m</a>,
 executes the system command
-(<tt>frame3dd</tt> on Linux or OS X, <tt>frame3dd.exe</tt> on Windows)
+(<b>frame3dd</b> on Linux or OS X, <b>frame3dd.exe</b> on Windows)
 to compute the solution.
 The <b>Frame3DD</b> executable program
-(<tt>frame3dd</tt> on Linux or OS X, <tt>frame3dd.exe</tt> on Windows)
+(<b>frame3dd</b> on Linux or OS X, <b>frame3dd.exe</b> on Windows)
 must be saved to a directory within
 a path appropriate for your system, as described in the installation instructions, above.
 </p>
@@ -834,8 +838,8 @@ A <a href="../matlab/exA.m">Matlab version of Example A</a> illustrates
 how to analyze problems using the Matlab interface to <b>Frame3DD</b>.<br>
 Matlab versions of the other examples are forthcoming.
 <li> frame_3dd.m writes a <b>Frame3DD</b> input data file called IOdata.fmm,
-<li> frame_3dd.m calls a system command to run the executable program <tt>frame3dd</tt>.
-<li> The executable program <tt>frame3dd</tt> writes the Output Data to IOdata.out ,
+<li> frame_3dd.m calls a system command to run the executable program <b>frame3dd</b>.
+<li> The executable program <b>frame3dd</b> writes the Output Data to IOdata.out ,
 and also writes IOdata_out.m, containing the Output Data.<br>
 An m-file containing the Output Data is written whenever the frame3dd
 executable is run on a file ending in ".fmm",
@@ -876,22 +880,22 @@ Input Data for <b>Frame3DD</b> may be read and written using spreadsheet program
 <p>
 Any of the  <a href="http://www.duke.edu/~hpgavin/frame3dd/#examples"><b>Frame3DD</b> example Input Data files</a> may be opened with a spreadsheet program.
 When editing an Input Data file with a spreadsheet program, save it in
-<tt>.CSV</tt> format (with a "<tt>.CSV</tt>" filename extension).
+<b>.CSV</b> format (with a "<b>.CSV</b>" filename extension).
 </p>
 
 <p>
-When run on a <tt>.CSV</tt> file,
+When run on a <b>.CSV</b> file,
 <b>Frame3DD</b> writes results
 as plain text to the named Output Data file and also
-writes results of the static analyses to a spreadsheet with a filename ending in "<tt>.CSV</tt>".
+writes results of the static analyses to a spreadsheet with a filename ending in "<b>.CSV</b>".
 For example, running <b>Frame3DD</b> as follows:
 <pre>
 frame3dd  MyFrame.CSV  MyResultsA.out
 </pre>
 </p>
 <p>
-results in the two Output Data files  <tt>MyResultsA.out</tt> and <tt>MyResultsA_out.CSV</tt>.
-These <tt>.CSV</tt> files may be viewed, edited, pre-processed, and post-processed with a spreadsheet program.
+results in the two Output Data files  <b>MyResultsA.out</b> and <b>MyResultsA_out.CSV</b>.
+These <b>.CSV</b> files may be viewed, edited, pre-processed, and post-processed with a spreadsheet program.
 </p>
 
 <p>
@@ -1805,7 +1809,7 @@ frequency convergence tolerance.  The frequency convergence error is defined her
 
 <a name="InputData"><h2>9. Input Data Format</h2>
 <p>
-Click <a href="template.3dd">here</a> to download an Input Data template, template.3dd, or cut-and-paste the text below.
+Click <a href="template.3dd">here</a> to download an Input Data template, template.3dd, or copy-and-paste the text below.
 </p>
 </a>
 
